@@ -4,10 +4,11 @@ NSD RELEASE NOTES
 =============
 
 BUG FIXES:
-	- Bugfix #253: Don't put NS RRs in a response with QTYPE=DNSKEY.	
+	- Bugfix #253: Don't put NS RRs in a response with QTYPE=DS.	
 	- Bugfix #320: use arcrandom(4) for QID generation if available.
 	- Bugfix #328: nsd-checkconf overrun.
-	- Bugfix #343: nsdc update fix
+	- Bugfix #343: nsdc update fix.
+	- Bugfix #347: Wrong NSEC3 returned for nodata response QTYPE=DS no delegation.
 	- Bugfix: Allow for huge amount of strings in TXT (and other) records.
 	- Bugfix: nsdc can now deal with tsig algorithms other than hmac-md5.
 	- Fixed several parts in the documentation, including #306, #345.
